--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ web:
     - DB_HOST=db
     - DB_USER=postgres
     - DB_PASSWORD=postgres
-    - DB_DATABASE=kioskdb
+    - DB_DATABASE=guidedSelling
   volumes:
     - .:/home/app/project
     - /home/app/project/node_modules
