--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.14.0",
     "masonry-layout": "^4.1.0",
     "morgan": "^1.6.1",
+    "nice-json2csv": "^0.2.2",
     "pg": "^6.0.3",
     "postmark": "^1.2.1",
     "serve-favicon": "^2.3.0"
