--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bookshelf": "^0.10.0",
     "browserify-ngannotate": "^2.0.0",
     "checkit": "^0.7.0",
+    "config": "^1.21.0",
     "cookie-parser": "^1.3.3",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
