--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-animate": "^1.5.8",
     "angular-messages": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.13.3",
     "bookshelf": "^0.10.0",
     "browserify-ngannotate": "^2.0.0",
@@ -23,11 +24,14 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
+    "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
     "lodash": "^4.14.0",
     "masonry-layout": "^4.1.0",
-    "morgan": "^1.6.1",
+    "morgan": "^1.7.0",
     "nice-json2csv": "^0.2.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "pg": "^6.0.3",
     "postmark": "^1.2.1",
     "serve-favicon": "^2.3.0"
