--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular": "^1.5.7",
     "angular-animate": "^1.5.8",
     "angular-messages": "^1.5.8",
+    "angular-route": "^1.5.8",
     "angular-ui-bootstrap": "^2.0.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.13.3",
@@ -24,17 +25,22 @@
     "cookie-parser": "^1.3.3",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-html2js": "^0.2.2",
     "jade": "^1.11.0",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.9",
     "lodash": "^4.14.0",
     "masonry-layout": "^4.1.0",
     "morgan": "^1.7.0",
+    "ngstorage": "^0.3.11",
     "nice-json2csv": "^0.2.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "pg": "^6.0.3",
     "postmark": "^1.2.1",
+    "run-sequence": "^1.2.2",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
