--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ dist
 public
 client/bower_components
 server
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
